--- a/3_testing.ipynb
+++ b/3_testing.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -37,12 +37,10 @@
      "text": [
       "warning: LF will be replaced by CRLF in 3_testing.ipynb.\n",
       "The file will have its original line endings in your working directory\n",
-      "[master aded994] Log Handling is done. Lets Deploy!\n",
-      " 3 files changed, 5 insertions(+), 22 deletions(-)\n",
-      " delete mode 100644 envs/.nonadmin\n",
-      " delete mode 100644 envs/conda-meta/history\n",
+      "[master 2f6b591] fixed application ref\n",
+      " 2 files changed, 8 insertions(+), 6 deletions(-)\n",
       "To https://github.com/thekhan314/CrudeOilApp.git\n",
-      "   5c5d271..aded994  master -> master\n"
+      "   aded994..2f6b591  master -> master\n"
      ]
     }
    ],
